--- a/.gitignore
+++ b/.gitignore
@@ -213,5 +213,5 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
-
+/Holup/classes/
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse,intellij+all
