Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,4 @@ Temporary Items
 *.icloud
 /Holup/classes/
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse,intellij+all
+Holup/.idea/
