--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,5 @@ Temporary Items
 /Holup/classes/
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse,intellij+all
 Holup/.idea/
+Holup/bin
+
