--- a/.gitignore
+++ b/.gitignore
@@ -217,4 +217,4 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse,intellij+all
 Holup/.idea/
 Holup/bin
-
+Holup/classes
