--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,java,eclipse,intellij+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,java,eclipse,intellij+all
 
+### Holip ###
+Holup/.metadata/
+Holup/classes/
+
 ### Eclipse ###
 .metadata
 bin/
